[change] project view parser has more logging, targets section is optional and sections are using specific types instead of raw strings (#166)
* cleaning

* generic singleton values

* bazel path is now a path!

* debugger address is now a HostAndPort!

* java path is now a path!

* list secrions are generic!

* format

* test list section test

* targerts are now build targets ids

* singleton tests update

* fix

* logsss 1

* logsss 2

* logs 3

* targets are optional

* change log