@@ -1,10 +1,13 @@
 package org.jetbrains.bsp.bazel.server.bsp.config;
 
-import com.google.common.collect.ImmutableList;
+import ch.epfl.scala.bsp4j.BuildTargetIdentifier;
 import io.vavr.control.Try;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.Arrays;
+import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 import org.jetbrains.bsp.bazel.projectview.model.ProjectView;
 import org.jetbrains.bsp.bazel.projectview.model.ProjectViewProvider;
 import org.jetbrains.bsp.bazel.projectview.model.sections.ProjectViewBazelPathSection;
@@ -20,15 +23,20 @@ public class ServerArgsProjectViewProvider implements ProjectViewProvider {
   private final ProjectViewDefaultParserProvider defaultParserProvider;
 
   public ServerArgsProjectViewProvider(Path bspProjectRoot, String pathToBazel, String targets) {
-    this.pathToBazel = new ProjectViewBazelPathSection(pathToBazel);
+    this.pathToBazel = new ProjectViewBazelPathSection(Paths.get(pathToBazel));
     this.targets =
-        Optional.of(
-            new ProjectViewTargetsSection(Arrays.asList(targets.split(",")), ImmutableList.of()));
+        Optional.of(new ProjectViewTargetsSection(calculateIncludedTargets(targets), List.of()));
     this.defaultParserProvider = new ProjectViewDefaultParserProvider(bspProjectRoot);
   }
 
+  private List<BuildTargetIdentifier> calculateIncludedTargets(String targets) {
+    return Arrays.stream(targets.split(","))
+        .map(BuildTargetIdentifier::new)
+        .collect(Collectors.toList());
+  }
+
   public ServerArgsProjectViewProvider(Path bspProjectRoot, String pathToBazel) {
-    this.pathToBazel = new ProjectViewBazelPathSection(pathToBazel);
+    this.pathToBazel = new ProjectViewBazelPathSection(Paths.get(pathToBazel));
     this.targets = Optional.empty();
     this.defaultParserProvider = new ProjectViewDefaultParserProvider(bspProjectRoot);
   }
@@ -38,7 +46,7 @@ public class ServerArgsProjectViewProvider implements ProjectViewProvider {
     var parsedProjectView = defaultParserProvider.create().get();
 
     return ProjectView.builder()
-        .targets(targets.orElse(parsedProjectView.getTargets()))
+        .targets(targets.or(parsedProjectView::getTargets))
         .bazelPath(Optional.of(pathToBazel))
         .debuggerAddress(parsedProjectView.getDebuggerAddress())
         .javaPath(parsedProjectView.getJavaPath())
